# chisel

./: CHANGELOG.md  Cargo.toml  cliff.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
chisel-common/: Cargo.toml  Makefile.toml  README.md  README.tpl
chisel-common/src/: lib.rs
chisel-common/src/char/: coords.rs  mod.rs  span.rs
chisel-common/src/macros/: files.rs
chisel-decoders/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README.tpl  baseline.sh  cliff.toml  run_profiling.sh
chisel-decoders/benches/: ascii_decoding.rs  utf8_decoding.rs
chisel-decoders/src/: ascii.rs  lib.rs  selector.rs  utf8.rs
chisel-json/: CHANGELOG.md  Cargo.toml  benchmark.sh
chisel-json-pointer/: Cargo.toml  Makefile.toml  README.md  README.tpl
chisel-json-pointer/src/: lib.rs
chisel-json/benches/: dom_parsing.rs  lexing.rs  sax_parsing.rs
chisel-json/examples/: distinct_object_pointers.rs  distinct_pointers.rs
chisel-json/src/: coords.rs  lib.rs  results.rs
chisel-json/src/lexer/: decoders.rs  lexer_core.rs  lexer_input.rs  mod.rs
chisel-json/src/parsers/: dom.rs  mod.rs  sax.rs  sax_events.rs
chisel-json/src/pointers/: pointer.rs
chisel-lexers/: Cargo.toml  Makefile.toml  README.md  README.tpl
chisel-lexers/benches/: json_lexer.rs  scanner.rs
chisel-lexers/src/: lib.rs  scanner.rs
chisel-lexers/src/json/: lexer.rs  mod.rs  numerics.rs  tokens.rs
chisel-parsers/: Cargo.toml  README.md  README.tpl
chisel-parsers/benches/: dom_parsing.rs  lexing.rs  sax_parsing.rs
chisel-parsers/examples/: distinct_object_pointers.rs  distinct_pointers.rs
chisel-parsers/fixtures/json/invalid/: invalid_array_1.json  invalid_array_2.json  invalid_bool_1.json  invalid_bool_2.json  invalid_bool_3.json  missing-colon.json  unterminated.json
chisel-parsers/fixtures/json/valid/: simple_schema.json
chisel-parsers/src/: lib.rs
chisel-parsers/src/json/: dom.rs  events.rs  mod.rs  sax.rs  specs.rs
