[workspace]
members = [
	"chisel-json",
	"chisel-json-pointer", 
	"chisel-decoders",
	"chisel-common",
	"chisel-lexers",
	"chisel-parsers"]
resolver="2"

[workspace.package]
edition="2021"
authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
rust-version="1.56"

[workspace.dependencies]
bytesize = "1.2.0"
criterion = {version = "0.5.1"}
pprof = {version = "0.13.0"}
