[package]
name = "chisel-common"
version = "1.0.10"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Chisel common macros, types and functions"
license = "MIT OR Apache-2.0"
keywords = ["utility"]
repository = "https://github.com/jonnycoombes/chisel-core/tree/trunk/chisel-common"

[dependencies]
