[package]
name = "chisel-decoders"
version = "1.0.7"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Simple UTF-8 and ASCII byte stream decoder"
license = "MIT OR Apache-2.0"
keywords = ["ascii", "utf8", "decoder"]
categories = ["encoding", "text-processing"]
repository = "https://github.com/jonnycoombes/chisel-core/tree/trunk/chisel-decoders"

[dependencies]

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
pprof = { workspace = true, features = ["flamegraph", "criterion", "protobuf"] }

[[bench]]
name = "utf8_decoding"
harness = false

[[bench]]
name = "ascii_decoding"
harness = false

[features]
