[package]
name = "chisel-decoders"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Chisel UTF-8 and ASCII byte stream decoder implementations"
license = "MIT OR Apache-2.0"
keywords = ["ascii", "utf8", "decoder"]
categories = ["encoding", "text-processing"]
repository = "https://github.com/jonnycoombes/chisel-core/tree/trunk/chisel-decoders"

[dependencies]

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
pprof = { workspace = true, features = ["flamegraph", "criterion", "protobuf"] }

[[bench]]
name = "utf8_decoding"
harness = false

[[bench]]
name = "ascii_decoding"
harness = false

[features]
