[package]
name = "chisel-json"
version = "1.0.7"
authors.workspace = true
edition.workspace = true 
rust-version.workspace = true
description = "Simple JSON parser for Rust"
license = "MIT OR Apache-2.0"
keywords = ["json", "parser"]
categories = ["parser-implementations", "text-processing"]
repository = "https://github.com/jonnycoombes/chisel-core/tree/trunk/chisel-json"

[dependencies]
fast-float = "0.2.0"
lexical={version = "6.1.1", features = ["parse-floats", "parse-integers"], optional = true}
chisel-decoders = {path = "../chisel-decoders"}

[dev-dependencies]
bytesize = "1.2.0"
criterion = {workspace = true, features = ["html_reports"]}
pprof = {workspace = true, features = ["flamegraph", "criterion", "protobuf"]}

[features]
default = ["mixed_numerics" ]
mixed_numerics = ["lexical"]

[[bench]]
name = "dom_parsing"
harness = false

[[bench]]
name = "sax_parsing"
harness = false

[[bench]]
name = "lexing"
harness = false
