[package]
name = "chisel-lexers"
version = "1.0.8"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Chisel backend lexers/scanners"
license = "MIT OR Apache-2.0"
keywords = ["lexer", "parsing"]
categories = ["text-processing"]
repository = "https://github.com/jonnycoombes/chisel-core/tree/trunk/chisel-lexers"

[dependencies]
chisel-common = {path = "../chisel-common"}
chisel-decoders = {path = "../chisel-decoders"}

[dev-dependencies]
bytesize = {workspace= true}
criterion = {workspace = true, features = ["html_reports"]}
pprof = {workspace = true, features = ["flamegraph", "criterion", "protobuf"]}

[[bench]]
name = "scanner"
harness = false
