[package]
name = "chisel-lexers"
version = "1.0.8"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Chisel backend lexers/scanners"
license = "MIT OR Apache-2.0"
keywords = ["lexer", "parsing"]
categories = ["text-processing"]
repository = "https://github.com/jonnycoombes/chisel-core/tree/trunk/chisel-lexers"

[dependencies]
fast-float = "0.2.0"
lexical={version = "6.1.1", features = ["parse-floats", "parse-integers"], optional = true}
chisel-common = "1.0.8"
chisel-decoders = "1.0.8"

[dev-dependencies]
bytesize = {workspace= true}
criterion = {workspace = true, features = ["html_reports"]}
pprof = {workspace = true, features = ["flamegraph", "criterion", "protobuf"]}

[features]
default = ["mixed_numerics"]
mixed_numerics = ["lexical"]

[[bench]]
name = "scanner"
harness = false


[[bench]]
name = "json_lexer"
harness = false
