[package]
name = "chisel-lexers"
version = "1.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Chisel backend lexers/scanners"
license = "MIT OR Apache-2.0"
keywords = ["lexer", "parsing"]
categories = ["text-processing"]
repository = "https://github.com/jonnycoombes/chisel-core/tree/trunk/chisel-lexers"

[dependencies]
fast-float = "0.2.0"
lexical={version = "6.1.1", features = ["parse-integers"]}
chisel-common = "1.1.0" 
chisel-decoders = "1.1.0"

[dev-dependencies]
bytesize = {workspace= true}
criterion = {workspace = true, features = ["html_reports"]}
pprof = {workspace = true, features = ["flamegraph", "criterion", "protobuf"]}

[features]
default = []
lazy-numerics = []

[[bench]]
name = "scanner"
harness = false


[[bench]]
name = "json_lexer"
harness = false
